Fix for issue with regular search not showing low priced plans.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+ 	background-color: #999999;
   background: url('../images/background.png') fixed no-repeat;
   margin: 15px 25px;
   font-family: Helvetica, Arial, sans-serif;
